--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://paneldatabase.humbleservers.com:3306/s22543_sapio
-spring.datasource.username=u22543_vwSqZOWPAM
-spring.datasource.password=sirh6A=f0@AWxOCpEKJvzFC=
+spring.datasource.url=jdbc:mysql://u22543_AvHLmgDXDL:.4.Tn%3DWLvdZAtoPrQBSm%5Elyx@paneldatabase.humbleservers.com:3306/s22543_sapio
+spring.datasource.username=u22543_AvHLmgDXDL
+spring.datasource.password=.4.Tn=WLvdZAtoPrQBSm^lyx
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
