--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,12 @@
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 # H2 Database Configuration
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:file:./data/mydb
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
+
 joinfaces.faces-servlet.enabled=true
 joinfaces.faces.automatic-extensionless-mapping=true
-spring.security.user.name=admin
-spring.security.user.password=password
