updates langchain to 1.0.3-beta3

--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <description>Demo project for Spring Boot</description>
     <properties>
         <hibernate.version>6.1.7.Final</hibernate.version>
-        <langchain4j.version>0.35.0</langchain4j.version>
+        <langchain4j.version>1.0.0-beta3</langchain4j.version>
         <java.version>21</java.version>
     </properties>
 
